RESOLVED FIXED308455
Fix compiler warning in SequesteredImmortalHeap.h
https://bugs.webkit.org/show_bug.cgi?id=308455
Summary Fix compiler warning in SequesteredImmortalHeap.h
Chris Dumez
Reported 2026-02-23 00:15:31 PST
Fix compiler warning in SequesteredImmortalHeap.h: ``` /Volumes/Work/WebKit/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/SequesteredImmortalHeap.h:118:13: warning: Value stored to 'newAllocHead' is never read [deadcode.DeadStores] 118 | newAllocHead = reinterpret_cast<void*>(m_allocHead); /Volumes/Work/WebKit/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/SequesteredImmortalHeap.h:135:13: warning: Value stored to 'newAllocHead' is never read [deadcode.DeadStores] 135 | newAllocHead = reinterpret_cast<void*>(m_allocHead); 2 warnings generated. ```
Attachments
Chris Dumez
Comment 1 2026-02-23 00:17:03 PST
EWS
Comment 2 2026-02-23 14:55:08 PST
Committed 308073@main (00500122071e): <https://commits.webkit.org/308073@main> Reviewed commits have been landed. Closing PR #59230 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-23 14:56:12 PST
Note You need to log in before you can comment on or make changes to this bug.