Fix compiler warning in SequesteredImmortalHeap.h https://bugs.webkit.org/show_bug.cgi?id=308455

Reviewed by Darin Adler.

Fix `Value stored to 'newAllocHead' is never read [deadcode.DeadStores]`
warnings in SequesteredImmortalHeap.h.

* Source/WTF/wtf/SequesteredImmortalHeap.h:
(WTF::SequesteredImmortalAllocator::allocate):
(WTF::SequesteredImmortalAllocator::alignedAllocate):

Canonical link: https://commits.webkit.org/308073@main